--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.json"
 exclude_filter=""
 export_path="Builds/Valcatyr.exe"
 encryption_include_filters=""
@@ -20,7 +20,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=2
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
@@ -32,9 +32,9 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon="res://Banners/Icon_256.ico"
-application/console_wrapper_icon=""
-application/icon_interpolation=4
+application/icon="res://Icons/icon.ico"
+application/console_wrapper_icon="res://Icons/icon.ico"
+application/icon_interpolation=0
 application/file_version=""
 application/product_version=""
 application/company_name=""
